# custom_filetype

./: .gitignore  README.md  pyproject.toml
sample/: registration.py  sft_spec.yaml  thumbnail.py  viewer.py  writer.py
src/custom_filetype/: __init__.py  registration.py  thumbnail_provider.py
